[project]
name = "random_number_agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Richard Blythman", email = "richardblythman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "naptha-sdk",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["random_number_agent"]

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"